[gd_scene load_steps=2 format=3 uid="uid://cwawf6tgto00t"]

[ext_resource type="Script" uid="uid://cutggc6274tvy" path="res://Scripts/menu_pausa.gd" id="1_vhfbk"]

[node name="MenuPausa" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vhfbk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.25882354)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 842.0
offset_top = 394.0
offset_right = 1077.0
offset_bottom = 644.0
alignment = 1

[node name="BotonContinuar" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continuar"

[node name="BotonMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="BotonSalir" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Salir"
